# src/requests/spells.rs
@@ -1,11 +1,6 @@
 use serde::Deserialize;
 
 #[derive(Deserialize)]
-pub struct GetSpellRequest {
-    pub name: String,
-}
-
-#[derive(Deserialize)]
 pub struct CreateSpellRequest {
     pub name: String,
     pub level: String,
@@ -32,13 +27,17 @@ pub struct UpdatedSpellData {
 pub type UpdateSpellRequest = UpdatedSpellData;
 
 #[derive(Deserialize)]
-pub struct DeleteSpellRequest {
-    pub name: String,
-}
-
-pub type PublishSpellRequest = DeleteSpellRequest;
-
-#[derive(Deserialize)]
 pub struct GetPublicSpellRequest {
     pub keyword: String,
+}
+
+#[derive(Deserialize)]
+pub struct QuerySpellRequest {
+    pub name: Option<String>,
+    pub level: Option<String>,
+    pub casting_time: Option<String>,
+    pub magic_school: Option<String>,
+    pub concentration: Option<bool>,
+    pub range: Option<String>,
+    pub duration: Option<String>,
 }
